--- a/home.html
+++ b/home.html
@@ -101,7 +101,7 @@
     #average{
       position: absolute;
       top:5px;
-      left: (max_width/2)+'px';
+      left:675px;
       font-family: 'Montserrat'
     }
     </style>
