--- a/home.html
+++ b/home.html
@@ -18,11 +18,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
+  <p class="startscr" id="startscph"> Welcome to U React! This is a game all about testing your reaction speed! <br /> Once you click the start button then you just have to <br /> click the circles, squares, or curvy boxes, and see how fast <br /> your reaction speed is! </p>
+  <button id="startbut" class="startscr"> Click to start Game! </button>
+
+<div id="game" display="none" class="hide">
   <div id="playzone"> </div>
   <div id="box"> </div>
   <p> Your Time: <span id="score"> </p>
     <p id="scores"> Yours Scores Are: </p>
     <p id="average"> U React! </p>
+  </div>
     <script src="script.js"></script>
   </body>
   </html>
