--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
 </head>
 <body>
   <div id="startme">
-  <p class="startscr" id="startscph"> Welcome to U React! This is a game all about testing your reaction speed! <br /> Once you click the start button then you just have to <br /> click the circles, squares, or curvy boxes, and see how fast <br /> your reaction speed is! </p>
+  <p class="startscr" id="startscph"> Welcome to U React! This is a game all about testing your reaction speed! <br /> Once you click the start button then you just have to <br /> click the circles, squares, or curvy boxes, and see how fast your reaction speed is! </p>
   <button id="startbut" class="startscr"> Click to start Game! </button>
 </div>
 
