Adding to both Git and Heroku

--- a/home.html
+++ b/home.html
@@ -29,6 +29,8 @@
   <p> Your Time: <span id="score"> </p>
     <p id="scores"> Yours Scores Are: </p>
     <p id="average"> U React! </p>
+    <p id="boxesTitle">You have hit: <span id="boxesHit"></span> boxes! </p>
+    <p id="missedTitle"> You have missed: <span id="boxesMissed"></span> times! </p>
   </div>
     <script src="script.js"></script>
   </body>
