Adding to both Git and Heroku

--- a/home.html
+++ b/home.html
@@ -31,6 +31,9 @@
     <p id="average"> U React! </p>
     <p id="boxesTitle">You have hit: <span id="boxesHit"></span> boxes! </p>
     <p id="missedTitle"> You have missed: <span id="boxesMissed"></span> times! </p>
+    <p id="yeet">Your average is <span id="check"> </span> seconds per block. </p>
+    <button id="stopper"> Push To Stop </button>
+    <button id="starter" onclick="stopInter();"> Push To Restart </button>
   </div>
     <script src="script.js"></script>
   </body>
