--- a/home.html
+++ b/home.html
@@ -26,14 +26,14 @@
 <div id="game" class="hide">
   <div id="playzone"> </div>
   <div id="box"> </div>
-  <p> Your Time: <span id="score"> </p>
+  <p class="startstuff"> Your Time: <span id="score"> </p>
     <p id="scores" class="startstuff"> Yours Scores Are: </p>
     <p id="average" class="startstuff"> U React! </p>
     <p id="boxesTitle" class="startstuff">You have hit: <span id="boxesHit"></span> boxes! </p>
     <p id="missedTitle" class="startstuff"> You have missed: <span id="boxesMissed"></span> times! </p>
     <p id="yeet" class="startstuff">Your average is <span id="check"> </span> seconds per block. </p>
-    <button id="stopper"> Push To Stop </button>
-    <button id="starter" onclick="stopInter();"> Push To Restart </button>
+    <button id="stopper" class="startstuff"> Push To Stop </button>
+    <button id="starter" onclick="stopInter();" class="startstuff"> Push To Restart </button>
   </div>
     <script src="script.js"></script>
   </body>
