Adding to both Git and Heroku

--- a/home.html
+++ b/home.html
@@ -26,7 +26,7 @@
 <div id="game" class="hide">
   <div id="playzone"> </div>
   <div id="box"> </div>
-  <p class="startstuff"> Your Time: <span id="score"> </p>
+  <p> Your Time: <span id="score"> </p>
     <p id="scores" class="startstuff"> Yours Scores Are: </p>
     <p id="average" class="startstuff"> U React! </p>
     <p id="boxesTitle" class="startstuff">You have hit: <span id="boxesHit"></span> boxes! </p>
