--- a/home.html
+++ b/home.html
@@ -19,22 +19,36 @@
 </head>
 <body onload="setDivs;">
   <div id="startme">
-  <p class="startscr" id="startscph"> Welcome to U React! This is a game all about testing your reaction speed! <br /> Once you click the start button then you just have to <br /> click the circles, squares, or curvy boxes, and see how fast your reaction speed is! </p>
-  <button id="startbut" class="startscr"> Click to start Game! </button>
-</div>
-
-<div id="game" class="hide">
-  <div id="playzone"> </div>
-  <div id="box"> </div>
-  <p> Your Time: <span id="score"> </p>
-    <p id="scores" class="startstuff"> Yours Scores Are: </p>
-    <p id="average" class="startstuff"> U React! </p>
-    <p id="boxesTitle" class="startstuff">You have hit: <span id="boxesHit"></span> boxes! </p>
-    <p id="missedTitle" class="startstuff"> You have missed: <span id="boxesMissed"></span> times! </p>
-    <p id="yeet" class="startstuff">Your average is <span id="check"> </span> seconds per block. </p>
-    <button id="stopper" class="startstuff"> Push To Stop </button>
-    <button id="starter" onclick="stopInter();" class="startstuff"> Push To Restart </button>
+    <p class="startscr" id="startscph"> Welcome to U React! This is a game all about testing your reaction speed! <br /> Once you click the start button then you just have to <br /> click the circles, squares, or curvy boxes, and see how fast your reaction speed is! </p>
+    <button id="startbut" class="startscr"> Click to start Game! </button>
   </div>
+  <div id="difficulty">
+    <h1 id="difTitle"> Choose Your Difficulty: The Higher the difficulty, the faster the blocks appear! </h1>
+    <button id="easy"> Easy Difficulty </button>
+    <button id="medium"> Medium Difficulty </button>
+    <button id="hard"> Hard Difficulty </button>
+  </div>
+  <div id="blockAmount">
+    <h1 id="howman"> How many blocks do you want on this level? </h1>
+    <button id="twenty"> 20 </button>
+    <button id="thirty"> 30 </button>
+    <button id="fifty"> 50 </button>
+  </div>
+  <div id="finalStat">
+
+  </div>
+  <div id="game" class="hide">
+    <div id="playzone"> </div>
+    <div id="box"> </div>
+    <p> Your Time: <span id="score"> </p>
+      <p id="scores" class="startstuff"> Yours Scores Are: </p>
+      <p id="average" class="startstuff"> U React! </p>
+      <p id="boxesTitle" class="startstuff">You have hit: <span id="boxesHit"></span> boxes! </p>
+      <p id="missedTitle" class="startstuff"> You have missed: <span id="boxesMissed"></span> times! </p>
+      <p id="yeet" class="startstuff">Your average is <span id="check"> </span> seconds per block. </p>
+      <button id="stopper" class="startstuff"> Push To Stop </button>
+      <button id="starter" onclick="stopInter();" class="startstuff"> Push To Restart </button>
+    </div>
     <script src="script.js"></script>
   </body>
   </html>
