Adding to both Git and Heroku

--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
 </head>
 <body onload="setDivs;">
   <div id="startme">
-    <p class="startscr" id="startscph"> Welcome to U React! This is a game all about testing your reaction speed! <br /> Once you click the start button then you just have to <br /> click the circles, squares, or curvy boxes, and see how fast your reaction speed is! </p>
+    <p class="startscr" id="startscph"> Welcome to U React! This is a game all about testing your reaction speed! <br /> Once you click the start button then you just have to <br /> click the circles, squares, or curvy boxes, and see how fast your reaction speed is! Note: if you are on a tablet, please switch to portrait mode. </p>
     <button id="startbut" class="startscr"> Click to start Game! </button>
   </div>
   <div id="difficulty">
