Adding to both Git and Heroku

--- a/home.html
+++ b/home.html
@@ -30,9 +30,9 @@
   </div>
   <div id="blockAmount">
     <h1 id="howman"> How many blocks do you want on this level? </h1>
-    <button id="twenty"> 20 </button>
-    <button id="thirty"> 30 </button>
-    <button id="fifty"> 50 </button>
+    <button id="twenty"> 20 Blocks </button>
+    <button id="thirty"> 30 Blocks</button>
+    <button id="fifty"> 50 Blocks</button>
   </div>
   <div id="finalStat">
     <p id="youavg"> You averaged <span id="check"></span> boxes per second!</p>
