Adding to both Git and Heroku

--- a/home.html
+++ b/home.html
@@ -36,8 +36,8 @@
   </div>
   <div id="finalStat">
     <p id="youavg"> You averaged <span id="check"></span> boxes per second!</p>
-    <p id="youhit"> You hit <span id="boxesHit"> </span> out of <span id="hit-missed"></span> boxes! </p>
-    <p id="youtook"> You took <span id="totTime"> </span> seconds to hit <span id="boxesHit"></span> boxes!</p>
+    <p id="youhit"> You hit <span id="boxesHit"> </span> out of <span id="boxyouon"></span> boxes! </p>
+    <p id="youscore"> You scored </p>
     <button id="playAgain"> Play Again? </button>
   </div>
   <div id="game" class="hide">
