Adding to both Git and Heroku

--- a/home.html
+++ b/home.html
@@ -26,6 +26,7 @@
 </head>
 <body onload="setDivs;">
   <div id="startme">
+    <h3 id="titleslot"> U React! <h3>
     <p class="startscr" id="startscph"> Welcome to U React! This is a game all about testing your reaction speed!  Once you click the start button then you just have to  click the circles, squares, or curvy boxes, and see how fast your reaction speed is! Note: if you are on a tablet, please switch to portrait mode. </p>
     <button id="startbut" class="startscr"> Click to start Game! </button>
   </div>
