Adding to both Git and Heroku

--- a/home.html
+++ b/home.html
@@ -48,6 +48,7 @@
     <p id="youscore"> You scored </p>
     <div class="tooltip"  id="toolti" title="Scores are calculated by dividing 100 times the amount of blocks you hit by two time the product of your average speed and the sum of the time taken for you to finish and 10 times the amount of blocks you hit"> Scoring Info </div>
     <button id="playAgain"> Play Again? </button>
+    <a href="survey.html" id="survey"> Please click here to take a quick survey on the quality of this website! </a>
   </div>
   <div id="game" class="hide">
     <div id="playzone"> </div>
