--- a/home.html
+++ b/home.html
@@ -26,8 +26,11 @@
 </head>
 <body onload="setDivs;">
   <div id="startme">
+    <div id="title">
     <h3 id="titleslot"> U React! <h3>
-    <p class="startscr" id="startscph"> Welcome to U React! This is a game all about testing your reaction speed!  Once you click the start button then you just have to  click the circles, squares, or curvy boxes, and see how fast your reaction speed is! Note: if you are on a tablet, please switch to portrait mode. </p>
+    </div>
+    <div class="customHr">.</div>
+    <p class="startscr" id="startscph"> Welcome to U React! This is a game all about testing your reaction speed!  Once you click the start button then you just have to click the <br /><span style="color:#7777FF;">circles</span>, <br /><span style="color:#11CC11"> squares </span>, <br /> <span style="color:#FF7777"> or curvy boxes, </span> <br /> and see how fast your reaction speed is! <br /> Note: if you are on a tablet, please switch to portrait mode. </p>
     <button id="startbut" class="startscr"> Click to start Game! </button>
   </div>
   <div id="difficulty">
