--- a/home.html
+++ b/home.html
@@ -31,26 +31,26 @@
     </div>
     <div class="customHr">.</div>
     <p class="startscr" id="startscph"> Welcome to U React! This is a game all about testing your reaction speed!  Once you click the start button then you just have to click the <br /><span style="color:#7777FF;">circles</span>, <br /><span style="color:#11CC11"> squares </span>, <br /> <span style="color:#FF7777"> or curvy boxes, </span> <br /> and see how fast your reaction speed is! <br /> Note: if you are on a tablet, please switch to portrait mode. </p>
-    <button id="startbut" class="startscr"> Click to start Game! </button>
+    <button type="button" id="startbut" class="startscr btn btn-primary"> Click to start Game! </button>
   </div>
   <div id="difficulty">
     <h1 id="difTitle"> Choose Your Difficulty: The Higher the difficulty, the faster the blocks appear! </h1>
-    <button id="easy"> Easy Difficulty </button>
-    <button id="medium"> Medium Difficulty </button>
-    <button id="hard"> Hard Difficulty </button>
+    <button id="easy" type="button" class="btn btn-primary"> Easy Difficulty </button>
+    <button id="medium" type="button" class="btn btn-info"> Medium Difficulty </button>
+    <button id="hard" type="button" class="btn btn-success"> Hard Difficulty </button>
   </div>
   <div id="blockAmount">
     <h1 id="howman"> How many blocks do you want on this level? </h1>
-    <button id="twenty"> 20 Blocks </button>
-    <button id="thirty"> 30 Blocks</button>
-    <button id="fifty"> 50 Blocks</button>
+    <button id="twenty" type="button" class="btn btn-primary"> 20 Blocks </button>
+    <button id="thirty" type="button" class="btn btn-info"> 30 Blocks</button>
+    <button id="fifty" type="button" class="btn btn-success"> 50 Blocks</button>
   </div>
   <div id="finalStat">
     <p id="youavg"> You averaged <span id="check"></span> boxes per second!</p>
     <p id="youhit"> You hit <span id="boxesHit"> </span> out of <span id="boxyouon"></span> boxes! </p>
     <p id="youscore"> You scored </p>
     <div class="tooltip"  id="toolti" title="Scores are calculated by dividing 100 times the amount of blocks you hit by two time the product of your average speed and the sum of the time taken for you to finish and 10 times the amount of blocks you hit"> Scoring Info </div>
-    <button id="playAgain"> Play Again? </button>
+    <button id="playAgain" type="button" class="btn btn-success"> Play Again? </button>
     <a href="survey.html" id="survey"> Please click here to take a quick survey on the quality of this website! </a>
   </div>
   <div id="game" class="hide">
@@ -59,8 +59,8 @@
     <p> Your Time: <span id="score"> </span></p>
       <p id="scores" class="startstuff"> Yours Scores Are: </p>
       <p id="average" class="startstuff"> U React! </p>
-      <button id="stopper" class="startstuff"> Push To Stop </button>
-      <button id="starter" onclick="stopInter();" class="startstuff"> Push To Restart </button>
+      <button id="stopper" class="startstuff btn btn-danger"> Push To Stop </button>
+      <button id="starter" onclick="stopInter();" class="startstuff btn btn-warning"> Push To Restart </button>
     </div>
     <script src="script.js"></script>
     <script src="jquery.js"> </script>
