Adding to both Git and Heroku

--- a/home.html
+++ b/home.html
@@ -9,15 +9,16 @@
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"></link>
 
   <!-- jQuery library -->
-  <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.0.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
   <link rel="stylesheet" type="text/css" href="css/tooltipster.css" />
-    <script type="text/javascript" src="js/jquery.tooltipster.min.js"></script>
+  <script type="text/javascript" src="js/jquery.tooltipster.min.js"></script>
 
   <!-- Latest compiled JavaScript -->
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <meta charset="utf-8" />
   <meta http-equiv="Content-type" content="text/html" charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <script src="jquery.js"> </script>
   <script>
        $(document).ready(function() {
            $('.tooltip').tooltipster();
@@ -63,6 +64,5 @@
       <button id="starter" onclick="stopInter();" class="startstuff btn btn-warning"> Push To Restart </button>
     </div>
     <script src="script.js"></script>
-    <script src="jquery.js"> </script>
   </body>
   </html>
