--- a/home.html
+++ b/home.html
@@ -10,8 +10,6 @@
 
   <!-- jQuery library -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="css/tooltipster.css" />
-  <script type="text/javascript" src="js/jquery.tooltipster.min.js"></script>
 
   <!-- Latest compiled JavaScript -->
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
@@ -19,7 +17,7 @@
   <meta http-equiv="Content-type" content="text/html" charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
-<body onload="setDivs;">
+<body>
   <div id="startme">
     <div id="title">
     <h3 id="titleslot"> U React! <h3>
