Adding to both Git and Heroku

--- a/home.html
+++ b/home.html
@@ -45,14 +45,13 @@
     <p id="youavg"> You averaged <span id="check"></span> boxes per second!</p>
     <p id="youhit"> You hit <span id="boxesHit"> </span> out of <span id="boxyouon"></span> boxes! </p>
     <p id="youscore"> You scored </p>
-    <div class="tooltip"  id="toolti" title="Scores are calculated by dividing 100 times the amount of blocks you hit by two time the product of your average speed and the sum of the time taken for you to finish and 10 times the amount of blocks you hit"> Scoring Info </div>
     <button id="playAgain" type="button" class="btn btn-success"> Play Again? </button>
     <a href="survey.html" id="survey"> Please click here to take a quick survey on the quality of this website! </a>
   </div>
   <div id="game" class="hide">
     <div id="playzone"> </div>
     <div id="box"> </div>
-    <p> Your Time: <span id="score"> </span></p>
+    <p id="youtime"> Your Time: <span id="score"> </span></p>
       <p id="scores" class="startstuff"> Yours Scores Are: </p>
       <p id="average" class="startstuff"> U React! </p>
       <button id="stopper" class="startstuff btn btn-danger"> Push To Stop </button>
