Adding to both Git and Heroku

--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
     <h3 id="titleslot"> U React! <h3>
     </div>
     <div class="customHr">.</div>
-    <p class="startscr" id="startscph"> Welcome to U React! This is a game all about testing your reaction speed!  Once you click the start button then you just have to click the <br /><span style="color:#7777FF;" id="circlespan">circles</span>, <br /><span style="color:#11CC11" id="squarespan"> squares </span>, <br /> <span style="color:#FF7777" id="squirclespan"> or curvy boxes, </span> <br /> and see how fast your reaction speed is! <br /> Note: if you are on a tablet, please switch to portrait mode. Currently, this does not work well on iPhones and other small devices. </p>
+    <p class="startscr" id="startscph"> Welcome to U React! This is a game all about testing your reaction speed!  Once you click the start button then you just have to click the <br /><span style="color:#7777FF;" id="circlespan">circles</span>, <br /><span style="color:#11CC11" id="squarespan"> squares </span>, <br /> <span style="color:#FF7777" id="squirclespan"> or curvy boxes, </span> <br /> and see how fast your reaction speed is! <br /> Note: if you are on a tablet, please switch to portrait mode.</p>
     <button type="button" id="startbut" class="startscr btn btn-primary"> Click to start Game! </button>
     <div id="circle"> </div>
     <div id="square"> </div>
