--- a/home.html
+++ b/home.html
@@ -19,8 +19,8 @@
 </head>
 <body>
   <div id="startme">
-    <iframe src="https://ghbtns.com/github-btn.html?user=ddxtanx&repo=react-me&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
-    <iframe src="https://ghbtns.com/github-btn.html?user=ddxtanx&type=follow&count=true&size=large" frameborder="0" scrolling="0" width="220px" height="30px"></iframe>
+    <iframe id="repoid" src="https://ghbtns.com/github-btn.html?user=ddxtanx&repo=react-me&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
+    <iframe id="userid" src="https://ghbtns.com/github-btn.html?user=ddxtanx&type=follow&count=true&size=large" frameborder="0" scrolling="0" width="220px" height="30px"></iframe>
     <div id="title">
       <h3 id="titleslot"> U React! <h3>
       </div>
