--- a/pages/home.html
+++ b/pages/home.html
@@ -4,7 +4,7 @@
   <title> U React! </title>
   <link rel="shortcut icon" type="image/x-icon" href="http://www.free-icons-download.net/images/red-dot-icon-57558.png" />
   <link href='https://fonts.googleapis.com/css?family=Montserrat|Raleway' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" type="text/css" href="main.css">
+  <link rel="stylesheet" type="text/css" href="../css/main.css">
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"></link>
 
@@ -60,7 +60,7 @@
       <button id="stopper" class="startstuff btn btn-danger"> Push To Stop </button>
       <button id="starter" onclick="stopInter();" class="startstuff btn btn-warning"> Push To Restart </button>
     </div>
-    <script src="script.js"></script>
+    <script src="../js/script.js"></script>
     <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
