--- a/pages/home.html
+++ b/pages/home.html
@@ -16,6 +16,13 @@
   <meta charset="utf-8" />
   <meta http-equiv="Content-type" content="text/html" charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" type="text/css" href="../css/tooltipster.css" />
+  <script type="text/javascript" src="../js/jquery.tooltipster.min.js"></script>
+  <script>
+       $(document).ready(function() {
+           $('.tooltip').tooltipster();
+       });
+   </script>
 </head>
 <body>
   <div id="startme">
