--- a/pages/home.html
+++ b/pages/home.html
@@ -54,8 +54,8 @@
       <p id="youavg"> You averaged <span id="check"></span> boxes per second!</p>
       <p id="youhit"> You hit <span id="boxesHit"> </span> out of <span id="boxyouon"></span> boxes! </p>
       <p id="youscore"> You scored </p>
-      <a href="./survey.html" id="survey"> Please click here to take a quick survey on the quality of this website! </a>
-      <a href="./bugs.html" id="bugs"> If there were any mistakes or bugs in the game, please click here! </a>
+      <a href="../pages/survey.html" id="survey"> Please click here to take a quick survey on the quality of this website! </a>
+      <a href="../pages/bugs.html" id="bugs"> If there were any mistakes or bugs in the game, please click here! </a>
       <button id="playAgain" type="button" class="btn btn-success"> Play Again? </button>
     </div>
     <div id="game" class="hide">
