Adding to both Git and Heroku

--- a/pages/home.html
+++ b/pages/home.html
@@ -60,7 +60,7 @@
     </div>
     <div id="game" class="hide">
       <div id="playzone"> </div>
-      <div id="box"> </div>
+      <div id="box" onclick="startup()"> </div>
       <p id="youtime"> Your Time: <span id="score"> </span></p>
       <p id="scores" class="startstuff"> Yours Scores Are: </p>
       <p id="average" class="startstuff"> U React! </p>
