Adding to both Git and Heroku

--- a/pages/home.html
+++ b/pages/home.html
@@ -49,6 +49,9 @@
       <button id="twenty" type="button" class="btn btn-primary"> 20 Blocks </button>
       <button id="thirty" type="button" class="btn btn-info"> 30 Blocks</button>
       <button id="fifty" type="button" class="btn btn-success"> 50 Blocks</button>
+      <button id="custom" type="button" class="btn btn-danger"> Custom Amount </button>
+      <input id="custom-form" type="number" value = "How many Blocks?"> </input>
+      <button id="submit" class="btn btn-warning"> Submit </button>
     </div>
     <div id="finalStat">
       <p id="youavg"> You averaged <span id="check"></span> boxes per second!</p>
