--- a/pages/home.html
+++ b/pages/home.html
@@ -50,7 +50,7 @@
       <button id="thirty" type="button" class="btn btn-info"> 30 Blocks</button>
       <button id="fifty" type="button" class="btn btn-success"> 50 Blocks</button>
       <button id="custom" type="button" class="btn btn-danger"> Custom Amount </button>
-      <input id="custom-form" type="number" value = "How many Blocks?"> </input>
+      <input id="custom-form" type="number" value = "How many Blocks?">How Many Blocks?</input>
       <button id="submit" class="btn btn-warning"> Submit </button>
     </div>
     <div id="finalStat">
