--- a/pages/home.html
+++ b/pages/home.html
@@ -50,8 +50,11 @@
       <button id="thirty" type="button" class="btn btn-info"> 30 Blocks</button>
       <button id="fifty" type="button" class="btn btn-success"> 50 Blocks</button>
       <button id="custom" type="button" class="btn btn-danger"> Custom Amount </button>
-      <input id="custom-form" type="number" value = "How many Blocks?">How Many Blocks?</input>
-      <button id="submit" class="btn btn-warning"> Submit </button>
+      <form id="form">
+      <input id="custom-form" type="number" value = "20" min="1" required></input>
+      <input type="submit" id="submit" class="btn btn-warning"></button>
+    </form>
+      <p id="how"> How Many Blocks? </how>
     </div>
     <div id="finalStat">
       <p id="youavg"> You averaged <span id="check"></span> boxes per second!</p>
@@ -76,7 +79,7 @@
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    })(window,document,'script','http://www.google-analytics.com/analytics.js','ga');
 
     ga('create', 'UA-75603673-1', 'auto');
     ga('send', 'pageview');
