Add sharing services

--- a/pages/home.html
+++ b/pages/home.html
@@ -73,6 +73,24 @@
       <button id="stopper" class="startstuff btn btn-danger"> Push To Stop </button>
       <button id="starter" onclick="stopInter();" class="startstuff btn btn-warning"> Push To Restart </button>
     </div>
+    <!-- AddToAny BEGIN -->
+<div class="a2a_kit a2a_kit_size_32 a2a_default_style">
+<a class="a2a_dd" href="https://www.addtoany.com/share?linkurl=u-react.herokuapp.com&amp;linkname=Hey!%20I%20was%20just%20play%20UReact%2C%20a%20fun%20reaction%20time%20tester%20and%20you%20should%20play%20it%20too!%20"></a>
+<a class="a2a_button_facebook"></a>
+<a class="a2a_button_twitter"></a>
+<a class="a2a_button_google_plus"></a>
+</div>
+<script>
+var a2a_config = a2a_config || {};
+a2a_config.linkname = "Hey! I was just play UReact, a fun reaction time tester and you should play it too! ";
+a2a_config.linkurl = "u-react.herokuapp.com";
+a2a_config.color_main = "D7E5ED";
+a2a_config.color_border = "AECADB";
+a2a_config.color_link_text = "333333";
+a2a_config.color_link_text_hover = "333333";
+</script>
+<script async src="https://static.addtoany.com/menu/page.js"></script>
+<!-- AddToAny END -->
     <script src="../js/script.js"></script>
     <script src="../js/fastclick.js"></script>
     <script>
@@ -85,5 +103,6 @@
     ga('send', 'pageview');
 
     </script>
+
   </body>
   </html>
