Adding to both Git and Heroku

--- a/pages/home.html
+++ b/pages/home.html
@@ -74,7 +74,7 @@
       <button id="starter" onclick="stopInter();" class="startstuff btn btn-warning"> Push To Restart </button>
     </div>
     <!-- AddToAny BEGIN -->
-<div class="a2a_kit a2a_kit_size_32 a2a_default_style">
+<div class="a2a_kit a2a_kit_size_32 a2a_default_style" id="share">
 <a class="a2a_dd" href="https://www.addtoany.com/share?linkurl=u-react.herokuapp.com&amp;linkname=Hey!%20I%20was%20just%20play%20UReact%2C%20a%20fun%20reaction%20time%20tester%20and%20you%20should%20play%20it%20too!%20"></a>
 <a class="a2a_button_facebook"></a>
 <a class="a2a_button_twitter"></a>
