Fix bugs and positioning for iPhone

--- a/pages/home.html
+++ b/pages/home.html
@@ -46,9 +46,9 @@
     </div>
     <div id="blockAmount">
       <h1 id="howman"> How many blocks do you want on this level? </h1>
-      <button id="twenty" type="button" class="btn btn-primary"> 20 Blocks </button>
-      <button id="thirty" type="button" class="btn btn-info"> 30 Blocks</button>
-      <button id="fifty" type="button" class="btn btn-success"> 50 Blocks</button>
+      <button id="twenty" type="button" class="btn btn-primary number"> 20 Blocks </button>
+      <button id="thirty" type="button" class="btn btn-info number"> 30 Blocks</button>
+      <button id="fifty" type="button" class="btn btn-success number"> 50 Blocks</button>
       <button id="custom" type="button" class="btn btn-danger"> Custom Amount </button>
       <form id="form">
       <input id="custom-form" type="number" value = "20" min="1" required></input>
