--- a/pages/home.html
+++ b/pages/home.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title> U React! </title>
+  <link rel="apple-touch-icon-precomposed" sizes="57x57" href="../img/red-dot.png" />
   <link rel="shortcut icon" type="image/x-icon" href="http://www.free-icons-download.net/images/red-dot-icon-57558.png" />
   <link href='https://fonts.googleapis.com/css?family=Montserrat|Raleway' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="../css/main.css">
