--- a/pages/home.html
+++ b/pages/home.html
@@ -52,9 +52,9 @@
       <button id="twenty" type="button" class="btn btn-primary number"> 20 Blocks </button>
       <button id="thirty" type="button" class="btn btn-info number"> 30 Blocks</button>
       <button id="fifty" type="button" class="btn btn-success number"> 50 Blocks</button>
-      <button id="custom" type="button" class="btn btn-danger" ng-click="login.click()"> Custom Amount </button>
+      <button id="custom" type="button" class="btn btn-danger" ng-click="sub.click()"> Custom Amount </button>
       <div id="controllerForm">
-      <form id="form" name="form" ng-submit="loginform.$valid && login.submit()" novalidate>
+      <form id="form" name="form" ng-submit="loginform.$valid && sub.submit()" novalidate>
         <input id="custom-form" type="number" value = "20" min="1" ng-model="user.maxBlocks" ng-required="required"></input>
         <input type="submit" id="submit" class="btn btn-warning" ></button>
       </form>
