Adding to both Git and Heroku

--- a/pages/home.html
+++ b/pages/home.html
@@ -55,8 +55,8 @@
       <button id="custom" type="button" class="btn btn-danger" ng-click="sub.click()"> Custom Amount </button>
       <div id="controllerForm">
       <form id="loginform" name="form" ng-submit="loginform.$valid && sub.submit()" novalidate>
-        <input id="custom-form" type="number" value = "20" min="1" ng-model="user.maxBlocks" ng-required="required"></input>
-        <input type="submit" id="submit" class="btn btn-warning" ></button>
+        <input id="custom-form" type="number" value = "20" ng-min="1" ng-model="user.maxBlocks" ng-required="required" required></input>
+        <button type="submit" ng-disabled="loginform.$invalid">Login</button>
       </form>
       <p id="how"> How Many Blocks? </how>
       </div>
