--- a/pages/home.html
+++ b/pages/home.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" type="text/css" href="../css/tooltipster.css" />
   <script type="text/javascript" src="../js/jquery.tooltipster.min.js"></script>
   <script src="http://code.angularjs.org/1.5.5/angular.min.js"></script>
-  <script src="../js/app.js"></script>
+  <script src="https://code.angularjs.org/1.5.5/angular-messages.js"></script>
   <script>
   $(document).ready(function() {
     $('.tooltip').tooltipster();
@@ -52,10 +52,14 @@
       <button id="twenty" type="button" class="btn btn-primary number"> 20 Blocks </button>
       <button id="thirty" type="button" class="btn btn-info number"> 30 Blocks</button>
       <button id="fifty" type="button" class="btn btn-success number"> 50 Blocks</button>
-      <button id="custom" type="button" class="btn btn-danger" ng-click="sub.click()"> Custom Amount </button>
+      <button id="custom" type="button" class="btn btn-danger" ng-click="user.sub.2click()"> Custom Amount </button>
       <div id="controllerForm">
-      <form id="loginform" name="loginform" ng-submit="sub.submit(loginform)" novalidate>
-        <input id="custom-form" type="number" value = "20" min="1" ng-model="user.maxBlock" ng-required="required" required="required"></input>
+      <form id="form" name="form" ng-submit="user.sub.submit(form.num)" novalidate>
+        <input id="custom-form" ng-model="user.number" name="num" type="number" value = "20" min="1" required integer></input>
+      <div ng-show="user.dirtyFncs.anyDirty(form)" ng-messages="form.num.$error" role="alert">
+        <div ng-messages="required" ng-show="form.num.$error.required">Please Input a number </div>
+        <div ng-messages="min" ng-show="form.num.$error.min">The number has to be greater then one </div>
+      </div>
         <input id="submit" class="btn" type="submit"></button>
       </form>
       <p id="how"> How Many Blocks? </how>
@@ -98,6 +102,7 @@
       <!-- AddToAny END -->
       <script src="../js/script.js"></script>
       <script src="../js/fastclick.js"></script>
+      <script src="../js/app.js"></script>
       <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
