--- a/pages/home.html
+++ b/pages/home.html
@@ -16,7 +16,7 @@
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <meta charset="utf-8" />
   <meta http-equiv="Content-type" content="text/html" charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
+  <meta name="viewport" content='width=device-width, content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1", user-scalable='0''>
   <link rel="stylesheet" type="text/css" href="../css/tooltipster.css" />
   <script type="text/javascript" src="../js/jquery.tooltipster.min.js"></script>
   <script src="http://code.angularjs.org/1.5.5/angular.min.js"></script>
