--- a/pages/home.html
+++ b/pages/home.html
@@ -21,6 +21,7 @@
   <script type="text/javascript" src="../js/jquery.tooltipster.min.js"></script>
   <script src="http://code.angularjs.org/1.5.5/angular.min.js"></script>
   <script src="https://code.angularjs.org/1.5.5/angular-messages.js"></script>
+  <script src='https://code.responsivevoice.org/responsivevoice.js'></script>
   <script>
   $(document).ready(function() {
     $('.tooltip').tooltipster();
@@ -37,6 +38,10 @@
       <div class="customHr">.</div>
       <p class="startscr" id="startscph"> Welcome to U React! This is a game all about testing your reaction speed!  Once you click the start button then you just have to click the <br /><span style="color:#7777FF;" id="circlespan">circles</span>, <br /><span style="color:#11CC11" id="squarespan"> squares </span>, <br /> <span style="color:#FF7777" id="squirclespan"> or curvy boxes, </span> <br /> and see how fast your reaction speed is!</p>
       <button type="button" id="startbut" class="startscr btn btn-primary"> Click to start Game! </button>
+      <img id="soundBut" src="../img/sound-off.png" onclick="audioArr.turnOffVolume();"></img>
+      <img id="soundButOn" src="../img/sound.png" onclick="audioArr.turnOnVolume();"></img>
+      <p id="onoff"> Sound On </p>
+      <img src="../img/vol-help.png" id="imgg" class="tooltip" title="Press UP arrow to turn up volume, and DOWN arrow to turn down volume"/>
       <div id="circle"> </div>
       <div id="square"> </div>
       <div id="squircle"></div>
