--- a/pages/home.html
+++ b/pages/home.html
@@ -21,7 +21,6 @@
   <script type="text/javascript" src="../js/jquery.tooltipster.min.js"></script>
   <script src="http://code.angularjs.org/1.5.5/angular.min.js"></script>
   <script src="https://code.angularjs.org/1.5.5/angular-messages.js"></script>
-  <script src='https://code.responsivevoice.org/responsivevoice.js'></script>
   <script>
   $(document).ready(function() {
     $('.tooltip').tooltipster();
@@ -29,6 +28,8 @@
   </script>
 </head>
 <body>
+  <button id="stopper" class="startstuff btn btn-danger"> Push To Pause Music. </button>
+  <button id="starter" class="startstuff btn btn-warning"> Push To Play Music </button>
   <div id="startme">
     <iframe id="repoid" src="https://ghbtns.com/github-btn.html?user=ddxtanx&repo=react-me&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
     <iframe id="userid" src="https://ghbtns.com/github-btn.html?user=ddxtanx&type=follow&count=true&size=large" frameborder="0" scrolling="0" width="220px" height="30px"></iframe>
@@ -38,8 +39,8 @@
       <div class="customHr">.</div>
       <p class="startscr" id="startscph"> Welcome to U React! This is a game all about testing your reaction speed!  Once you click the start button then you just have to click the <br /><span style="color:#7777FF;" id="circlespan">circles</span>, <br /><span style="color:#11CC11" id="squarespan"> squares </span>, <br /> <span style="color:#FF7777" id="squirclespan"> or curvy boxes, </span> <br /> and see how fast your reaction speed is!</p>
       <button type="button" id="startbut" class="startscr btn btn-primary"> Click to start Game! </button>
-      <img id="soundBut" src="../img/sound-off.png" onclick="audioArr.turnOffVolume();"></img>
-      <img id="soundButOn" src="../img/sound.png" onclick="audioArr.turnOnVolume();"></img>
+      <img id="soundBut" class="sobut" src="../img/sound-off.png" onclick="audioArr.turnOffVolume();"></img>
+      <img id="soundButOn" class="sobut" src="../img/sound.png" onclick="audioArr.turnOnVolume();"></img>
       <p id="onoff"> Sound On </p>
       <img src="../img/vol-help.png" id="imgg" class="tooltip" title="Press UP arrow to turn up volume, and DOWN arrow to turn down volume"/>
       <div id="circle"> </div>
@@ -83,8 +84,6 @@
         <p id="youtime"> Your Time: <span id="score"> </span></p>
         <p id="scores" class="startstuff"> Yours Scores Are: </p>
         <p id="average" class="startstuff"> U React! </p>
-        <button id="stopper" class="startstuff btn btn-danger"> Push To Stop </button>
-        <button id="starter" onclick="stopInter();" class="startstuff btn btn-warning"> Push To Restart </button>
       </div>
       <!-- AddToAny BEGIN -->
       <div class="a2a_kit a2a_kit_size_32 a2a_default_style" id="share">
