Adding to both Git and Heroku

--- a/pages/home.html
+++ b/pages/home.html
@@ -41,8 +41,8 @@
       <button type="button" id="startbut" class="startscr btn btn-primary"> Click to start Game! </button>
       <img id="soundBut" class="sobut" src="../img/sound-off.png" onclick="audioArr.turnOffVolume();"></img>
       <img id="soundButOn" class="sobut" src="../img/sound.png" onclick="audioArr.turnOnVolume();"></img>
-      <p id="onoff"> Sound On </p>
-      <img src="../img/vol-help.png" id="imgg" class="tooltip" title="Press UP arrow to turn up volume, and DOWN arrow to turn down volume"/>
+      <p id="onoff"  class="sobut"> Sound On </p>
+      <img src="../img/vol-help.png" id="imgg" class="tooltip sobut" title="Press UP arrow to turn up volume, and DOWN arrow to turn down volume"/>
       <div id="circle"> </div>
       <div id="square"> </div>
       <div id="squircle"></div>
