--- a/pages/home.html
+++ b/pages/home.html
@@ -4,24 +4,24 @@
   <title> U React! </title>
   <link rel="apple-touch-icon-precomposed" sizes="57x57" href="../img/image.png" />
   <link rel="shortcut icon" type="image/x-icon" href="http://www.free-icons-download.net/images/red-dot-icon-57558.png" />
-  <link href='https://fonts.googleapis.com/css?family=Montserrat|Raleway' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Montserrat|Raleway' async rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="../css/main.css">
   <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"></link>
+  <link rel="stylesheet" async href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"></link>
 
   <!-- jQuery library -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+  <script async src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 
   <!-- Latest compiled JavaScript -->
-  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <script async src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <meta name="google-site-verification" content="v_SFDR9KhAEayFR-Bl9zWNTBOUtjbqZb-T_Kr8_ziXI" />
   <meta charset="utf-8" />
-  <meta name = "description" content="This is a fun game about clicking boxes quickly as they appear on the screen!"/>
+  <meta name = "description" content="Welcome to U React! This is a fun game about clicking boxes quickly as they appear on the screen!"/>
   <meta http-equiv="Content-type" content="text/html" charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=0"/>
   <link rel="stylesheet" type="text/css" href="../css/tooltipster.css" />
   <script type="text/javascript" src="../js/jquery.tooltipster.min.js"></script>
-  <script src="http://code.angularjs.org/1.5.5/angular.min.js"></script>
-  <script src="https://code.angularjs.org/1.5.5/angular-messages.js"></script>
+  <script async src="http://code.angularjs.org/1.5.5/angular.min.js"></script>
   <script>
   $(document).ready(function() {
     $('.tooltip').tooltipster();
@@ -63,8 +63,8 @@
       <div id="controllerForm">
       <form id="form" name="form" ng-submit="sub.submit(form.num)" novalidate>
         <input id="custom-form" ng-model="number" name="num" type="number" value = "20" min="1" required onlyDigits></input>
-      <div ng-show="!form.$valid" ng-messages="num.$error" role="alert">
-        <div id="errormes" ng-messages="required">Please Input a valid number number, the number has to be greater than zero and be a whole number. </div>
+      <div ng-show="!form.$valid" role="alert">
+        <div id="errormes" >Please Input a valid number number, the number has to be greater than zero and be a whole number. </div>
       </div>
         <input id="submit" class="btn" type="submit"></button>
       </form>
