Adding to both Git and Heroku

--- a/pages/home.html
+++ b/pages/home.html
@@ -2,10 +2,10 @@
 <html ng-app="uReact">
 <head>
   <title> U React! </title>
-  <link rel="apple-touch-icon-precomposed" sizes="57x57" href="../img/image.png" />
-  <link rel="shortcut icon" type="image/x-icon" href="http://www.free-icons-download.net/images/red-dot-icon-57558.png" />
+  <link rel="apple-touch-icon-precomposed" async sizes="57x57" href="../img/image.png" />
+  <link rel="shortcut icon" type="image/x-icon" async href="http://www.free-icons-download.net/images/red-dot-icon-57558.png" />
   <link href='https://fonts.googleapis.com/css?family=Montserrat|Raleway' async rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" type="text/css" href="../css/main.css">
+  <link async rel="stylesheet" type="text/css" href="../css/main.css">
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" async href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"></link>
 
@@ -19,8 +19,8 @@
   <meta name = "description" content="Welcome to U React! This is a fun game about clicking boxes quickly as they appear on the screen!"/>
   <meta http-equiv="Content-type" content="text/html" charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=0"/>
-  <link rel="stylesheet" type="text/css" href="../css/tooltipster.css" />
-  <script type="text/javascript" src="../js/jquery.tooltipster.min.js"></script>
+  <link async rel="stylesheet" type="text/css" href="../css/tooltipster.css" />
+  <script async type="text/javascript" src="../js/jquery.tooltipster.min.js"></script>
   <script async src="http://code.angularjs.org/1.5.5/angular.min.js"></script>
   <script>
   $(document).ready(function() {
